OOP JsonValue concept